--- a/app.html
+++ b/app.html
@@ -3,10 +3,10 @@
 <head>
 <meta name="viewport" content="width=device-width, user-scalable=no" />  
 <title>Icon font test</title>
-<link rel="stylesheet" href="style/style.css" />
 <link rel="stylesheet" href="style/icons.css" />
 <link rel="stylesheet" href="style/headers.css" />
 <link rel="stylesheet" href="style/lists.css" />
+<link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
 
@@ -17,47 +17,75 @@
   </section>
 
   <section data-type="list">
+    <header>Primary actions</header>
     <ul>
       <li>
         <aside class="icon icon-wifi-info"></aside>
         <p>icon-wifi-info</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
-        <aside class="icon icon-sim-card"></aside>
-        <p>icon-sim-card</p>
+        <aside class="icon icon-sim"></aside>
         <p>icon-sim</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-radio"></aside>
         <p>icon-radio</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-camera"></aside>
         <p>icon-camera</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-geolocation"></aside>
         <p>icon-geolocation</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-data-e"></aside>
         <p>icon-data-e</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-h-plus"></aside>
+        <p>icon-data-h-plus</p>
+        <p>Nos lo cargamos!</p>
+      </li>
       </li>
       <li>
         <aside class="icon icon-data-h"></aside>
         <p>icon-data-h</p>
-      </li>
+        <p>Nos lo cargamos!</p>
       <li>
         <aside class="icon icon-data-o"></aside>
         <p>icon-data-o</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-4g"></aside>
+        <p>icon-data-4g</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-3g"></aside>
+        <p>icon-data-3g</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-data-2g"></aside>
+        <p>icon-data-2g</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-data"></aside>
         <p>icon-data</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
-        <aside class="icon icon-airplane-mode"></aside>
-        <p>icon-airplane-mode</p>
+        <aside class="icon icon-airplane"></aside>
         <p>icon-airplane</p>
       </li>
       <li>
@@ -65,13 +93,11 @@
         <p>icon-wifi</p>
       </li>
       <li>
-        <aside class="icon icon-low-storage"></aside>
-        <p>icon-low-storage</p>
+        <aside class="icon icon-storage-low"></aside>
         <p>icon-storage-low</p>
       </li>
       <li>
-        <aside class="icon icon-bloetooth"></aside>
-        <p>icon-bloetooth</p>
+        <aside class="icon icon-bluetooth"></aside>
         <p>icon-bluetooth</p>
       </li>
       <li>
@@ -83,28 +109,23 @@
         <p>icon-download</p>
       </li>
       <li>
-        <aside class="icon icon-agenda-view"></aside>
-        <p>icon-agenda-view</p>
+        <aside class="icon icon-view-agenda"></aside>
         <p>icon-view-agenda</p>
       </li>
       <li>
-        <aside class="icon icon-day-view"></aside>
-        <p>icon-day-view</p>
+        <aside class="icon icon-view-day"></aside>
         <p>icon-view-day</p>
       </li>
       <li>
-        <aside class="icon icon-week-view"></aside>
-        <p>icon-week-view</p>
+        <aside class="icon icon-view-week"></aside>
         <p>icon-view-week</p>
       </li>
       <li>
-        <aside class="icon icon-month-view"></aside>
-        <p>icon-month-view</p>
+        <aside class="icon icon-view-month"></aside>
         <p>icon-view-month</p>
       </li>
       <li>
-        <aside class="icon icon-today-go-to"></aside>
-        <p>icon-today-go-to</p>
+        <aside class="icon icon-go-today"></aside>
         <p>icon-go-today</p>
       </li>
       <li>
@@ -132,8 +153,8 @@
         <p>icon-flag</p>
       </li>
       <li>
-        <aside class="icon icon-forward-message"></aside>
-        <p>icon-forward-message</p>
+        <aside class="icon icon-icon-forward"></aside>
+        <p>icon-icon-forward</p>
         <p>icon-forward</p>
       </li>
       <li>
@@ -149,6 +170,14 @@
         <p>icon-move</p>
       </li>
       <li>
+        <aside class="icon icon-mark-read"></aside>
+        <p>icon-mark-read</p>
+      </li>
+      <li>
+        <aside class="icon icon-mark-unread"></aside>
+        <p>icon-mark-unread</p>
+      </li>
+      <li>
         <aside class="icon icon-send"></aside>
         <p>icon-send</p>
       </li>
@@ -157,13 +186,8 @@
         <p>icon-compose</p>
       </li>
       <li>
-        <aside class="icon icon-user-account--headers"></aside>
-        <p>icon-user-account--headers</p>
-        <p>(duplicado: contacts)</p>
-      </li>
-      <li>
-        <aside class="icon icon-edit-contact"></aside>
-        <p>icon-edit-contact</p>
+        <aside class="icon icon-icon-contacts-edit"></aside>
+        <p>icon-icon-contacts-edit</p>
         <p>icon-contacts-edit</p>
       </li>
       <li>
@@ -171,23 +195,19 @@
         <p>icon-contacts</p>
       </li>
       <li>
-        <aside class="icon icon-bookmarked"></aside>
-        <p>icon-bookmarked</p>
+        <aside class="icon icon-favorite-on"></aside>
         <p>icon-favorite-on</p>
       </li>
       <li>
-        <aside class="icon icon-bookmark-favorite"></aside>
-        <p>icon-bookmark-favorite</p>
+        <aside class="icon icon-favorite-off"></aside>
         <p>icon-favorite-off</p>
       </li>
       <li>
-        <aside class="icon icon-forward-browser"></aside>
-        <p>icon-forward-browser</p>
+        <aside class="icon icon-browser-forward"></aside>
         <p>icon-browser-forward</p>
       </li>
       <li>
-        <aside class="icon icon-back-browser"></aside>
-        <p>icon-back-browser</p>
+        <aside class="icon icon-browser-back"></aside>
         <p>icon-browser-back</p>
       </li>
       <li>
@@ -207,18 +227,15 @@
         <p>icon-paste</p>
       </li>
       <li>
-        <aside class="icon icon-stop-alarm"></aside>
-        <p>icon-alarm-stop</p>
+        <aside class="icon icon-alarm-stop"></aside>
         <p>icon-alarm-stop</p>
       </li>
       <li>
-        <aside class="icon icon-add-alarm"></aside>
-        <p>icon-add-alarm</p>
+        <aside class="icon icon-alarm-add"></aside>
         <p>icon-alarm-add</p>
       </li>
       <li>
-        <aside class="icon icon-snooze"></aside>
-        <p>icon-snooze</p>
+        <aside class="icon icon-alarm-snooze"></aside>
         <p>icon-alarm-snooze</p>
       </li>
       <li>
@@ -246,18 +263,11 @@
         <p>icon-search</p>
       </li>
       <li>
-        <aside class="icon icon-new-add"></aside>
-        <p>icon-new-add</p>
-        <p>icon-add (esta centrado?)</p>
-      </li>
-      <li>
-        <aside class="icon icon-forward-nav"></aside>
-        <p>icon-forward-nav</p>
+        <aside class="icon icon-nav-forward"></aside>
         <p>icon-nav-forward</p>
       </li>
       <li>
-        <aside class="icon icon-back-nav"></aside>
-        <p>icon-back-nav</p>
+        <aside class="icon icon-nav-back"></aside>
         <p>icon-nav-back</p>
       </li>
       <li>
@@ -269,35 +279,406 @@
         <p>icon-close</p>
       </li>
       <li>
-        <aside class="icon icon-data-4g"></aside>
-        <p>icon-data-4g</p>
+        <aside class="icon icon-add"></aside>
+        <p>icon-add</p>
       </li>
       <li>
-        <aside class="icon icon-data-3g"></aside>
-        <p>icon-data-3g</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-2g"></aside>
-        <p>icon-data-2g</p>
-      </li>
-      <li>
-        <aside class="icon icon-data-h-plus"></aside>
-        <p>icon-data-h-plus</p>
-      </li>
-      <li>
-        <aside class="icon icon-edit-list"></aside>
-        <p>icon-edit-list</p>
+        <aside class="icon icon-list-edit"></aside>
         <p>icon-list-edit</p>
       </li>
+    </ul>
+
+    <header>Status bar</header>
+    <ul>
       <li>
-        <aside class="icon icon-mark-read"></aside>
-        <p>icon-mark-read</p>
+        <aside class="icon icon-status-sim-alert"></aside>
+        <p>icon-status-sim-alert</p>
       </li>
       <li>
-        <aside class="icon icon-mark-unread"></aside>
-        <p>icon-mark-unread</p>
+        <aside class="icon icon-status-alarm"></aside>
+        <p>icon-status-alarm</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-rec"></aside>
+        <p>icon-status-rec</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-geolocalization"></aside>
+        <p>icon-status-geolocalization</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-fowarding-call"></aside>
+        <p>icon-status-fowarding-call</p>
+        <p>icon-status-call-fowarding</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-play"></aside>
+        <p>icon-status-play</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-usb-mass-storage"></aside>
+        <p>icon-status-usb-mass-storage</p>
+        <p>icon-status-usb</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-headphones"></aside>
+        <p>icon-status-headphones</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-slash"></aside>
+        <p>icon-status-slash</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-mute"></aside>
+        <p>icon-status-mute</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-bluetooth"></aside>
+        <p>icon-status-bluetooth</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-notification-message"></aside>
+        <p>icon-status-notification-message</p>
+        <p>icon-status-message</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-notification-round"></aside>
+        <p>icon-status-notification-round</p>
+        <p>icon-status-notification</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-dots-glyth"></aside>
+        <p>icon-status-dots-glyth</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-0"></aside>
+        <p>icon-status-number-glyth-0</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-9"></aside>
+        <p>icon-status-number-glyth-9</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-8"></aside>
+        <p>icon-status-number-glyth-8</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-7"></aside>
+        <p>icon-status-number-glyth-7</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-6"></aside>
+        <p>icon-status-number-glyth-6</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-5"></aside>
+        <p>icon-status-number-glyth-5</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-4"></aside>
+        <p>icon-status-number-glyth-4</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-3"></aside>
+        <p>icon-status-number-glyth-3</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-2"></aside>
+        <p>icon-status-number-glyth-2</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-number-glyth-1"></aside>
+        <p>icon-status-number-glyth-1</p>
+        <p>Nos lo cargamos!</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-e"></aside>
+        <p>icon-status-data-e</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-o"></aside>
+        <p>icon-status-data-o</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-four-g"></aside>
+        <p>icon-status-data-four-g</p>
+        <p>icon-status-data-4g</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-three-g"></aside>
+        <p>icon-status-data-three-g</p>
+        <p>icon-status-data-3g</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-two-g"></aside>
+        <p>icon-status-data-two-g</p>
+        <p>icon-status-data-2g</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-g"></aside>
+        <p>icon-status-data-g</p>
+        <p>(FALTA!)</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-h"></aside>
+        <p>icon-status-data-h</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data-h-plus"></aside>
+        <p>icon-status-data-h-plus</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-data"></aside>
+        <p>icon-status-data</p>
+        <p>(FALTA!)</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-tethering"></aside>
+        <p>icon-status-tethering</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-wifi-full"></aside>
+        <p>icon-status-wifi-full</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-wifi-3"></aside>
+        <p>icon-status-wifi-3</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-wifi-2"></aside>
+        <p>icon-status-wifi-2</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-wifi-1"></aside>
+        <p>icon-status-wifi-1</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-roaming"></aside>
+        <p>icon-status-signal-roaming</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-rectangles"></aside>
+        <p>icon-status-signal-rectangles</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-no2"></aside>
+        <p>icon-status-signal-no2</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-no"></aside>
+        <p>icon-status-signal-no</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-full"></aside>
+        <p>icon-status-signal-full</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-4"></aside>
+        <p>icon-status-signal-4</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-3"></aside>
+        <p>icon-status-signal-3</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-2"></aside>
+        <p>icon-status-signal-2</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-signal-1"></aside>
+        <p>icon-status-signal-1</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-airplane-cross"></aside>
+        <p>icon-status-airplane-cross</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-airplane"></aside>
+        <p>icon-status-airplane</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-battery-load"></aside>
+        <p>icon-status-battery-load</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-battery-ask"></aside>
+        <p>icon-status-battery-ask</p>
+      </li>
+      <li>
+        <aside class="icon icon-status-battery-empty"></aside>
+        <p>icon-status-battery-empty</p>
       </li>
     </ul>
+
+    <header>Media</header>
+    <!--ul>
+      <li>
+        <aside class="icon icon-status-sim-alert"></aside>
+        <p>icon-sim-alert</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+      <li>
+        <aside class="icon icon-sim"></aside>
+        <p>icon-sim</p>
+      </li>
+    </ul-->
   </section>
 </body>
 </html>
