--- a/app.html
+++ b/app.html
@@ -22,27 +22,24 @@
       <li>
         <aside class="icon icon-wifi-info"></aside>
         <p>icon-wifi-info</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-sim"></aside>
         <p>icon-sim</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-radio"></aside>
         <p>icon-radio</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-camera"></aside>
         <p>icon-camera</p>
-        <p>Nos lo cargamos!</p>
+        <p>duplicado</p>
       </li>
       <li>
         <aside class="icon icon-geolocation"></aside>
         <p>icon-geolocation</p>
-        <p>Nos lo cargamos!</p>
+        <p>duplicado</p>
       </li>
       <li>
         <aside class="icon icon-data-e"></aside>
@@ -82,7 +79,6 @@
       <li>
         <aside class="icon icon-data"></aside>
         <p>icon-data</p>
-        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-airplane"></aside>
@@ -404,43 +400,37 @@
       <li>
         <aside class="icon icon-status-data-e"></aside>
         <p>icon-status-data-e</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-o"></aside>
         <p>icon-status-data-o</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-four-g"></aside>
         <p>icon-status-data-four-g</p>
-        <p>icon-status-data-4g</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-three-g"></aside>
         <p>icon-status-data-three-g</p>
-        <p>icon-status-data-3g</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-two-g"></aside>
         <p>icon-status-data-two-g</p>
-        <p>icon-status-data-2g</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data-g"></aside>
-        <p>icon-status-data-g</p>
-        <p>(FALTA!)</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-h"></aside>
         <p>icon-status-data-h</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-data-h-plus"></aside>
         <p>icon-status-data-h-plus</p>
-      </li>
-      <li>
-        <aside class="icon icon-status-data"></aside>
-        <p>icon-status-data</p>
-        <p>(FALTA!)</p>
+        <p>Nos lo cargamos!</p>
       </li>
       <li>
         <aside class="icon icon-status-tethering"></aside>
@@ -521,164 +511,300 @@
     </ul>
 
     <header>Media</header>
-    <!--ul>
+    <ul>
       <li>
-        <aside class="icon icon-status-sim-alert"></aside>
-        <p>icon-sim-alert</p>
+        <aside class="icon icon-edit-photo-wallpaper"></aside>
+        <p>icon-edit-photo-wallpaper</p>
+        <p>icon-wallpaper-edit</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-undo"></aside>
+        <p>icon-undo</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-select"></aside>
+        <p>icon-select</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-crop-free"></aside>
+        <p>icon-crop-free</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-crop-3-2"></aside>
+        <p>icon-crop-3-2</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-crop-2-3"></aside>
+        <p>icon-crop-2-3</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-crop-1-1"></aside>
+        <p>icon-crop-1-1</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-crop-background"></aside>
+        <p>icon-crop-background</p>
+        <p>El background en cada uno de los crops?</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-slideshow"></aside>
+        <p>icon-slideshow</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-auto-flash"></aside>
+        <p>icon-auto-flash</p>
+        <p>icon-flash-auto</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-on-flash"></aside>
+        <p>icon-on-flash</p>
+        <p>icon-flash-on</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-camera-front"></aside>
+        <p>icon-camera-front</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-camera-back"></aside>
+        <p>icon-camera-back</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-camera-video-recorder"></aside>
+        <p>icon-camera-video-recorder</p>
+        <p>icon-camera-video</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-camera"></aside>
+        <p>icon-camera</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-songs"></aside>
+        <p>icon-songs</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-album"></aside>
+        <p>icon-album</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-grid-view"></aside>
+        <p>icon-grid-view</p>
+        <p>icon-grid</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-artist"></aside>
+        <p>icon-artist</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-Capa-12"></aside>
+        <p>icon-Capa-12</p>
+        <p>icon-sort-date</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-alphabetical"></aside>
+        <p>icon-alphabetical</p>
+        <p>icon-sort-alphabetical</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-shuffle"></aside>
+        <p>icon-shuffle</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-infinite-repeat"></aside>
+        <p>icon-infinite-repeat</p>
+        <p>icon-repeat</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-one-repeat"></aside>
+        <p>icon-one-repeat</p>
+        <p>icon-repeat-once</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-skip-forward"></aside>
+        <p>icon-skip-forward</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-skip-backward"></aside>
+        <p>icon-skip-backward</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-seek-forward"></aside>
+        <p>icon-seek-forward</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-seek-backward"></aside>
+        <p>icon-seek-backward</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-stop"></aside>
+        <p>icon-stop</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-play"></aside>
+        <p>icon-play</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-pause"></aside>
+        <p>icon-pause</p>
+      </li>
+    </ul>
+
+    <header>Communications</header>
+    <ul>
+      <li>
+        <aside class="icon icon-email-remove-attach"></aside>
+        <p>icon-email-remove-attach</p>
+        <p>icon-email-remove</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-email-flag"></aside>
+        <p>icon-email-flag</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-email-attachment"></aside>
+        <p>icon-email-attachment</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-email-add"></aside>
+        <p>icon-email-add</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-contact-undo"></aside>
+        <p>icon-contact-undo</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-contact-delete"></aside>
+        <p>icon-contact-delete</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-contact-favorite"></aside>
+        <p>icon-contact-favorite</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-contact-add-favorite"></aside>
+        <p>icon-contact-add-favorite</p>
+        <p>nos lo cargamos!</p>
       </li>
       <li>
-        <aside class="icon icon-sim"></aside>
-        <p>icon-sim</p>
+        <aside class="icon icon-contact-link"></aside>
+        <p>icon-contact-link</p>
       </li>
-    </ul-->
+      <li>
+        <aside class="icon icon-contact-phone"></aside>
+        <p>icon-contact-phone</p>
+      </li>
+      <li>
+        <aside class="icon icon-contact-sms"></aside>
+        <p>icon-contact-sms</p>
+      </li>
+      <li>
+        <aside class="icon icon-contact-email"></aside>
+        <p>icon-contact-email</p>
+        <p>linea mas gruesa</p>
+      </li>
+      <li>
+        <aside class="icon icon-expand"></aside>
+        <p>icon-expand</p>
+      </li>
+      <li>
+        <aside class="icon icon-outgoing-sms"></aside>
+        <p>icon-outgoing-sms</p>
+        <p>icon-sms-outgoing</p>
+      </li>
+      <li>
+        <aside class="icon icon-incoming-sms"></aside>
+        <p>icon-incoming-sms</p>
+        <p>icon-sms-incoming</p>
+      </li>
+      <li>
+        <aside class="icon icon-check-mark"></aside>
+        <p>icon-check-mark</p>
+      </li>
+      <li>
+        <aside class="icon icon-check-full"></aside>
+        <p>icon-check-full</p>
+      </li>
+      <li>
+        <aside class="icon icon-check-empty"></aside>
+        <p>icon-check-empty</p>
+      </li>
+      <li>
+        <aside class="icon icon-call-outgoing"></aside>
+        <p>icon-call-outgoing</p>
+      </li>
+      <li>
+        <aside class="icon icon-call-missed"></aside>
+        <p>icon-call-missed</p>
+      </li>
+      <li>
+        <aside class="icon icon-call-incoming"></aside>
+        <p>icon-call-incoming</p>
+      </li>
+      <li>
+        <aside class="icon icon-call-paused"></aside>
+        <p>icon-call-paused</p>
+      </li>
+      <li>
+        <aside class="icon icon-dismiss-keyboard"></aside>
+        <p>icon-dismiss-keyboard</p>
+      </li>
+      <li>
+        <aside class="icon icon-add-contact"></aside>
+        <p>icon-add-contact</p>
+        <p>icon-contact-add</p>
+      </li>
+      <li>
+        <aside class="icon icon-switch-lines"></aside>
+        <p>icon-switch-lines</p>
+        <p>icon-switch</p>
+      </li>
+      <li>
+        <aside class="icon icon-pick-up"></aside>
+        <p>icon-pick-up</p>
+      </li>
+      <li>
+        <aside class="icon icon-hang-up"></aside>
+        <p>icon-hang-up</p>
+      </li>
+      <li>
+        <aside class="icon icon-voicemail"></aside>
+        <p>icon-voicemail</p>
+      </li>
+      <li>
+        <aside class="icon icon-hold"></aside>
+        <p>icon-hold</p>
+      </li>
+      <li>
+        <aside class="icon icon-sms"></aside>
+        <p>icon-sms</p>
+        <p>duplicado</p>
+      </li>
+      <li>
+        <aside class="icon icon-recent-calls"></aside>
+        <p>icon-recent-calls</p>
+      </li>
+      <li>
+        <aside class="icon icon-contacts"></aside>
+        <p>icon-contacts</p>
+        <p>duplicado</p>
+      </li>
+      <li>
+        <aside class="icon icon-speaker"></aside>
+        <p>icon-speaker</p>
+      </li>
+      <li>
+        <aside class="icon icon-dialpad"></aside>
+        <p>icon-dialpad</p>
+      </li>
+      <li>
+        <aside class="icon icon-communications-bluetooth"></aside>
+        <p>icon-communications-bluetooth</p>
+        <p>icon-speaker-bluetooth</p>
+      </li>
+      <li>
+        <aside class="icon icon-mute"></aside>
+        <p>icon-mute</p>
+      </li>
+    </ul>
   </section>
 </body>
 </html>
